name:           testapp
version:        0.1
synopsis:       An application to test snaplets
description:    An application to test snaplets
license:        BSD3
license-file:   LICENSE
author:         Doug Beardsley
maintainer:     snap@snapframework.com
build-type:     Simple
cabal-version:  >= 1.6
homepage:       http://snapframework.com/
category:       Web

Executable app
  hs-source-dirs: src
  main-is: App.hs

  other-modules:

  build-depends:
    aeson                     >= 0.3   && < 0.4,
    attoparsec                >= 0.8   && < 0.9,
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.10,
    containers                >= 0.3,
    data-lens                 >= 2.0.1 && < 2.1,
    data-lens-template        >= 2.0.1 && < 2.1,
    directory                 >= 1.0   && < 1.2,
    directory-tree            >= 0.10  && < 0.11,
    filepath                  >= 1.1   && < 1.2,
    haskell98,
    heist                     >= 0.6   && < 0.7,
    mtl                       >  2.0   && < 2.1,
    snap                      >= 0.6   && < 0.7,
    snap-core                 >= 0.4   && < 0.5,
    snaplet-simpletest,
    text                      >= 0.11,
    transformers              >= 0.2,
    xmlhtml                   >= 0.1   && < 0.2

  ghc-prof-options: -prof -auto-all

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans
